force-app/main/default/objects/Property_Inspection__c/fields/Days_Since_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Inspection__c</fullName>
    <formula>MAX(0, TODAY() - Inspection_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>