force-app/main/default/objects/Property_Inspection__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Move-Out</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>