force-app/main/default/objects/Property_Inspection__c/fields/Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Name__c</fullName>
    <label>Inspector Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>