force-app/main/default/objects/Property_Inspection__c/validationRules/Rating_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Number_Validation</fullName>
    <active>true</active>
    <description>Must between 1-5</description>
    <errorConditionFormula>OR(Overall_Rating__c &lt; 1,Overall_Rating__c &gt; 5)</errorConditionFormula>
    <errorMessage>Rating must between 1-5</errorMessage>
</ValidationRule>