force-app/main/default/objects/Property_Inspection__c/validationRules/Rating_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Inspection_Status__c, &apos;Completed&apos;  ),ISBLANK(Overall_Rating__c) )</errorConditionFormula>
    <errorMessage>Rating field is required when Status is &quot;Completed&quot;</errorMessage>
</ValidationRule>