force-app/main/default/objects/Property_Inspection__c/listViews/Inspections_30_Days.listView-meta.xml
<ListView>
    <fullName>Inspections_30_Days</fullName>
    <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Related_Property__c</columns>
    <columns>Inspection_Date__c</columns>
    <columns>Inspection_Status__c</columns>
    <columns>Inspection_Type__c</columns>
    <columns>Inspector_Name__c</columns>
    <columns>Overall_Rating__c</columns>
    <columns>Inspection_Cost__c</columns>
    <columns>Days_Since_Inspection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Days_Since_Inspection__c</field>
        <operation>lessOrEqual</operation>
        <value>30</value>
    </filters>
    <filters>
        <field>Days_Since_Inspection__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Days_Since_Inspection__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Inspection_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Inspections Last 30 Days</label>
</ListView>